# gravity-sfml

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/cpp-physfs/: CMakeLists.txt  physfs.cpp  physfs.hpp
app/fmtlog/: CMakeLists.txt  log.cpp
app/math/: vector.hpp
app/octo/: game.cpp  game.hpp  gamestate.cpp  gamestate.hpp
app/octo/content/: contentmanager.cpp  contentmanager.hpp  filecontentmanager.cpp  filecontentmanager.hpp  music.cpp  music.hpp  physfscontentmanager.cpp  physfscontentmanager.hpp  sfml.cpp  sfml.hpp  shader.cpp  shader.hpp
app/octo/content/sfml/: textureloader.cpp  textureloader.hpp
app/octo/game/: components.hpp  world.cpp  world.hpp
app/octo/game/components/: attraction.cpp  attraction.hpp  dynamicbody.hpp  movable.hpp  planet.cpp  planet.hpp
app/octo/game/systems/: attraction.cpp  attraction.hpp  attractionsystem.cpp  boundaryenforcer.cpp  movement.cpp  movement.hpp
app/octo/rendering/: debugdraw.hpp
app/octo/states/: ingamestate.cpp  ingamestate.hpp
assets/: CMakeLists.txt  README.md  asset_processor.cmake
assets/base/: CMakeLists.txt
assets/base/planets/shaders/planets/default/: default.frag  default.vert
assets/core/: CMakeLists.txt
assets/fonts/: CMakeLists.txt
cpp-physfs/: physfs.cpp  physfs.hpp
doc/: namespaces.dox
documentation/: CMakeLists.txt  Doxyfile.in  namespaces.dox
fmtlog/: log.cpp  log.hpp
source/: CMakeLists.txt  main.cpp
source/cpp-physfs/: CMakeLists.txt  physfs.hpp
source/fmtlog/: CMakeLists.txt  fmtlog.cpp  fmtlog.hpp
source/more-math/: CMakeLists.txt  all.hpp  rect.hpp  vector.hpp
source/octo/: CMakeLists.txt  debugoverlay.cpp  debugoverlay.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp
source/octo/content/: contentmanager.cpp  contentmanager.hpp  filecontentmanager.cpp  filecontentmanager.hpp  font.cpp  font.hpp  music.cpp  music.hpp  physfscontentmanager.cpp  sfml.cpp  sfml.hpp  shader.hpp  streaming.hpp
source/octo/game/: components.hpp  systems.hpp  world.cpp  world.hpp
source/octo/game/collision/: mask.cpp  mask.hpp  util.cpp  util.hpp
source/octo/game/components/: attraction.cpp  attraction.hpp  collision.cpp  collision.hpp  collisionmask.cpp  collisionmask.hpp  debugdata.hpp  dynamicbody.cpp  dynamicbody.hpp  health.cpp  health.hpp  material.cpp  material.hpp  planet.cpp  planet.hpp  position.cpp  position.hpp  projectile.cpp  projectile.hpp  spatial.cpp  spatial.hpp  vessel.cpp  vessel.hpp
source/octo/game/events/: componentmodified.cpp  componentmodified.hpp  damage.cpp  damage.hpp  entitycollision.cpp  entitycollision.hpp  explode.cpp  explode.hpp
source/octo/game/serialization/: gamestate.fbs  worldstate.fbs
source/octo/game/systems/: attractionsystem.cpp  attractionsystem.hpp  bounce.cpp  bounce.hpp  boundaryenforcer.cpp  boundaryenforcer.hpp  collision.cpp  collision.hpp  debug.cpp  debug.hpp  explosions.cpp  explosions.hpp  healthsystem.cpp  healthsystem.hpp  physics.cpp  physics.hpp  projectiles.cpp  projectiles.hpp  vesselcontrol.cpp  vesselcontrol.hpp
source/octo/math/: all.hpp  rect.hpp  util.hpp  vector.hpp
source/octo/rendering/: debugdraw.cpp  debugdraw.hpp
source/octo/states/: ingamestate.cpp  ingamestate.hpp
source/octo/util/: fpscounter.cpp  fpscounter.hpp  interpolation.hpp  pixelarray.hpp  rectiterator.hpp
